--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">54.203.193.56</domain>
+        <domain includeSubdomains="true">192.168.8.100</domain>
     </domain-config>
 </network-security-config>
